# storetle

./: .gitignore  FORMAT.md  README.md  bench_cc.py  bench_parallel.py  index.html  pyproject.toml  stress_cc.py  stress_test.py
.github/workflows/: publish.yml
pkg/: package.json  storetle_wasm.d.ts  storetle_wasm.js  storetle_wasm_bg.wasm.d.ts
rust/: Cargo.toml  README.md  codegen_vocab.py
rust/src/: codec.rs  container.rs  decode.rs  lib.rs  vocab.rs
rust/storetle-wasm/: Cargo.toml  LICENSE
rust/storetle-wasm/src/: lib.rs
rust/tests/: differential.rs  gen_fixtures.py
rust/tests/fixtures/: basic.storetle  manifest.txt  multi.storetle
rust/tests/fixtures/expected/: basic_000000.html  basic_000001.html  basic_000002.html  basic_000003.html  basic_000004.html  basic_000005.html  basic_000006.html  basic_000007.html  basic_000008.html  basic_000009.html  basic_000011.html  embedded_000000.html  embedded_000001.html  embedded_000002.html  embedded_000003.html  embedded_000004.html  multi_000000.html  multi_000001.html  multi_000127.html  multi_000255.html  multi_000256.html  multi_000298.html  multi_000299.html
storetle/: __init__.py  brotli_compat.py  cli.py  decoder.py  encoder.py  folder.py  receipt.py  registry.py  remote.py  stream.py  text.py  verified_bridge.py  vocab.py  warc.py  zstd_compat.py
web/: README.md  sample.storetle
web/pkg/: storetle_wasm_bg.wasm
